# django-autographql

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
autographql/: apps.py  base_types.py  constants.py  converters.py  fields.py  managers.py  models.py  monkeypatch.py  mutation.py  options.py  query.py  registry.py  schema.py  types.py  utils.py  views.py
autographql/auth/: constants.py  decorators.py  middleware.py  query.py  rules.py  utils.py
autographql/filters/: converters.py  enums.py  fields.py  types.py  utils.py
autographql/optimizer/: query.py  utils.py
autographql/orderby/: enums.py  types.py
autographql/tests/: __init__.py  models.py
autographql/tests/fixtures/: northwind.json
