[metadata]
name = django-autographql
version = 0.0.2
description = A Django app to automatically generate graphql apis from django code.
long_description = file: README.rst
url = https://github.com/ehsu0407/django-autographql
author = Eddie Hsu
author_email = ehsu0407@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    djangorestframework >= 3.12
    graphene >= 3.0
    graphene-django >= 3.0
    graphene-django-optimizer >= 0.9.1
    bridgekeeper >= 0.9
